Fixes calendario. Fixes twitter and githyub link

--- a/_posts/2016-12-01-bemvindo.md
+++ b/_posts/2016-12-01-bemvindo.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "O que são Olimpíadas Científicas?"
-autor: admin
+author: admin
 image: images/bonecooc.png
 ---
 Você acabou de descobrir as olimpíadas científicas e [quer saber mais sobre elas][oc1]?
