Updates calendarios page

--- a/_posts/2016-12-01-bemvindo.md
+++ b/_posts/2016-12-01-bemvindo.md
@@ -9,4 +9,5 @@ As olimpíadas científicas são competições para estudantes com o objetivo de
 
 Acesse nossa [página introdutória][oc1] para mais informações!
 
+This website hasn't been updated since 2015
 [oc1]: {{ site.baseurl }}/olimpiadas/o-que-sao-olimpiadas-cientificas/ 
