--- a/404.md
+++ b/404.md
@@ -1,5 +1,9 @@
 ---
 layout: default
+title: 404
+permalink: /404.html
 ---
 
-#Página não Encontrada
+# Página não Encontrada
+
+Volte para o site principal ou para o [vida de olimpico](olimpiadascientificas.com/vida-de-olimpico/)
