Deixa a página 404 mais bonita

--- a/404.md
+++ b/404.md
@@ -5,5 +5,5 @@ permalink: /404.html
 ---
 
 # Página não Encontrada
-
-Volte para o site principal ou para o [vida de olimpico](olimpiadascientificas.com/vida-de-olimpico/)
+![erro 404](static/images/boneco-pergunta.png){: .img-center}
+Volte para o site [principal](/) ou para o [vida de olimpico](olimpiadascientificas.com/vida-de-olimpico/)
