--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ permalink: /404.html
 
 # Página não Encontrada
 ![erro 404](static/images/boneco-pergunta.png){: .img-center}
-Volte para o site [principal](/) ou para o [vida de olimpico](olimpiadascientificas.com/vida-de-olimpico/)
+Volte para o site [principal](/) ou para o [vida de olimpico](/vida-de-olimpico/)
