Facebook images for iao teams. CSS tweaks for the menu. Support for pinned posts

--- a/_posts/2016-12-01-bemvindo.md
+++ b/_posts/2016-12-01-bemvindo.md
@@ -3,6 +3,7 @@ layout: post
 title:  "O que são Olimpíadas Científicas?"
 author: admin
 image: images/bonecooc.png
+pinned: true
 ---
 Você acabou de descobrir as olimpíadas científicas e [quer saber mais sobre elas][oc1]?
 As olimpíadas científicas são competições para estudantes com o objetivo de incentivar e encontrar talentos nas diversas áreas de conhecimento. Existem de diversas áreas, e podem ser individuais, em equipes, organizada em provas, debates e torneios!
